[package]
name = "wizards_castle_ncurses"
version = "1.0.11"
authors = ["Brian \"Beej Jorgensen\" Hall <beej@beej.us>"]
edition = "2024"

[features]
cheat = []

[dependencies]
wizardscastle = { git = "https://github.com/beejjorgensen/Wizards-Castle-Rust", tag = "v0.9.8"}
#wizardscastle = { path = "../Wizards-Castle-Rust/" }
ncurses = "6.0.1"
rand = "0.10.0"
